<resources>
    <string name="app_name">Xe Vivu</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Login">Đăng nhập</string>
    <string name="SignUp">Đăng ký</string>
    <string name="ResendCode">Gửi lại mã</string>
    <string name="WelcomeTitle">Chào mừng bạn đến với hệ thống ứng dụng\u00A0\u00A0</string>
    <string name="Xe">Xe</string>
    <string name="CreateAccount">Tạo tài khoản</string>
    <string name="LetStart">BẮT ĐẦU NÀO !</string>
    <string name="PleaseEnterYourPhoneNumber">Bạn vui lòng điền Số điện thoại nhé!</string>
    <string name="AnErrorOccurred">Có lỗi xảy ra!</string>
    <string name="AccountDoesNotExist">Rất tiếc, Tài khoản không tồn tại!</string>
    <string name="PasswordNotMatch">Mật khẩu nhập lại không khớp!</string>
    <string name="PleaseFillAllInformation">Bạn vui lòng điền đầy đủ thông tin nhé!</string>
    <string name="PasswordChangedSuccessfully">Đổi mật khẩu thành công!</string>
    <string name="SomethingWentWrong">Rất tiếc đã có lỗi xảy ra, bạn vui lòng thử lại nhé!</string>
    <string name="VerificationMessage">Một mã xác minh đã được gửi đến %1$s qua tin nhắn SMS</string>
    <string name="ResendCodeMessage">Vui lòng nhập mã (0:%1$d)</string>
    <string name="OTPResent">Đã gửi lại OTP</string>
    <string name="PleaseEnterOTP">Vui lòng nhập OTP</string>
    <string name="VerificationSuccessful">Xác minh thành công!</string>
    <string name="InvalidOTP">OTP không hợp lệ!</string>
    <string name="CongratulationSuccessfullyLogin">Chúc mừng bạn đã đăng nhập thành công!</string>
    <string name="WrongInformation">Sai thông tin, bạn kiểm tra lại nhé!</string>
    <string name="GuideContent1">Để có thể sử dụng những tính năng của ứng dụng, bạn vui lòng\u00A0</string>
    <string name="GuideContent2">\u00A0Cấp quyền truy cập vị trí\u00A0</string>
    <string name="GuideContent3">cho ứng dụng bằng cách ấn vào tùy chọn\u00A0</string>
    <string name="GuideContent4">Cho phép Trong khi dùng ứng dụng\u00A0</string>
    <string name="GuideContent5">nhé !</string>
    <string name="WelcomeXeViVu">Chào mừng bạn đến với ứng dụng Xe Vivu</string>
    <string name="PleaseGrantLocation">Bạn hãy cấp quyền truy cập Vị trí để sử dụng các tính năng của ứng dụng nhé!</string>
    <string name="ExitTheApp">Thoát khỏi ứng dụng</string>
    <string name="AreYouExit">Bạn có chắc chắn muốn thoát khỏi ứng dụng không ?</string>
    <string name="Exit">Thoát</string>
    <string name="Return">Quay lại</string>
    <string name="AccountExists">Rất tiếc, Tài khoản đã tồn tại!</string>
    <string name="VerificationRegistrationSuccessful">Xác minh và Đăng ký tài khoản thành công!</string>
    <string name="Title1">Đặt xe mọi lúc</string>
    <string name="Description1">Bạn có thể đặt xe bất cứ khi nào cần, giao diện thân thiện đặt xe trong tích tắc !</string>
    <string name="Title2">Tài xế mọi nơi</string>
    <string name="Description2">Với lực lượng tài xế trải dài từ nông thôn đến thành thị, sẵn sàng phục vụ bạn !</string>
    <string name="Title3">Điểm đến linh hoạt</string>
    <string name="Description3">Dễ dàng chọn địa điểm với hệ thống bản đồ chi tiết</string>
    <string name="ErrorWhileSearching">Có lỗi xảy ra khi tìm kiếm</string>
    <string name="RecoverPassword">Lấy lại mật khẩu</string>
    <string name="SendOTPToPhone">Chúng tôi sẽ gửi mã xác minh đến Số điện thoại mà bạn cung cấp để tiến hành cấp lại mật khẩu mới</string>
    <string name="PhoneNum">SỐ ĐIỆN THOẠI</string>
    <string name="Continue">Tiếp tục</string>
    <string name="NotHaveAccount">Bạn chưa có tài khoản ?</string>
    <string name="Password">MẬT KHẨU</string>
    <string name="YouForgetPassword">\u00A0Bạn quên mật khẩu ?</string>
    <string name="InputNewPassword">NHẬP MẬT KHẨU MỚI</string>
    <string name="ConfirmNewPassword">XÁC NHẬN LẠI MẬT KHẨU MỚI</string>
    <string name="LocationPermission">Quyền truy cập vị trí</string>
    <string name="GrantLocationPermission">Cấp quyền truy cập vị trí</string>
    <string name="Surname">HỌ</string>
    <string name="Name">TÊN</string>
    <string name="HaveAccount">Bạn đã có tài khoản ?</string>
    <string name="VerificationCode">Mã xác minh</string>
    <string name="Verify">Xác minh</string>
    <string name="Allow">Cho phép</string>
    <string name="NotAllowed">Không cho phép</string>
    <string name="YourLocation">Vị trí của bạn</string>
    <string name="SelectPickUpPoint">Chọn điểm đón</string>
    <string name="SelectThisPickUpPoint">Chọn điểm đón này</string>
    <string name="Destination">> Điểm đến: %1$s</string>
    <string name="Destination_Pickup">> Điểm đón: %1$s\n|\n> Điểm đến: %2$s</string>
    <string name="VehicleOptions">Tùy chọn phương tiện</string>
    <string name="Bike">Xe 2 bánh</string>
    <string name="Car">Xe 4 chỗ</string>
    <string name="MVP">Xe 7 chỗ</string>
    <string name="EstimateTripTime">Thời gian chuyến xe dự tính:\u00A0</string>
    <string name="TripTime">%1$s phút</string>
    <string name="PaymentOptions">Tuỳ chọn thanh toán</string>
    <string name="SelectPaymentMethod">Chọn phương thức thanh toán</string>
    <string name="Cash">Tiền mặt</string>
    <string name="Momo">Momo</string>
    <string name="Booking">Đặt xe</string>
    <string name="CancelBooking">Hủy đặt xe</string>
    <string name="NoVehiclesAvailable">Chúng tôi xin lỗi, không có phương tiện nào ở gần khu vực này.</string>
    <string name="TryAgain">Chọn địa điểm khác/Thử lại</string>
    <string name="SampleName">Nguyễn Văn A</string>
    <string name="DriverIsComing">Tài xế đang đến</string>
    <string name="DriverFound">Đã tìm được tài xế cho bạn rồi nè !</string>
    <string name="DriverCancel">Xin lỗi bạn, vì lý do nào đó mà tài xế đã Hủy chuyến. Bạn có muốn tiếp tục tìm tài xế khác ?</string>
    <string name="Yes">Có</string>
    <string name="No">Không</string>
    <string name="DriverArrived">Tài xế đã đến</string>
    <string name="DriverArrivedNotification">Tài xế đã đến điểm đón rồi bạn ơi !</string>
    <string name="Rating">Đánh giá</string>
    <string name="DriverReport">Báo cáo tài xế</string>
    <string name="Excellent">Tuyệt vời</string>
    <string name="WriteFeedback">\u00A0Viết đánh giá</string>
    <string name="TravelDistance">Quãng đường di chuyển: %1$d km</string>
    <string name="Send">Gửi</string>
    <string name="CancellationTitle">Vui lòng chọn lý do mà bạn Hủy đặt chuyến xe</string>
    <string name="ReportTitle">Bạn muốn Tố cáo tài xế vì lý do gì ?</string>
    <string name="ReceiptTitle">Chuyến đi của bạn đã kết thúc</string>
    <string name="ReceiptTime">Thời gian: %1$d phút</string>
    <string name="Complete">Hoàn thành</string>
    <string name="PleaseChooseReason">Bạn vui lòng chọn lý do nhé !</string>
    <string name="OnTheTrip">Đang trong chuyến đi</string>
    <string name="SendRating">Gửi đánh giá</string>
    <string name="SendReport">Gửi tố cáo</string>
    <string name="RatingSubmitted">Đã gửi đánh giá</string>
    <string name="ReportSubmitted">Đã gửi tố cáo</string>
    <string name="PleaseRate">Bạn vui lòng chọn số Sao đánh giá nhé !</string>
    <string name="YouHaveRated">Bạn chỉ có thể đánh giá một lần trong một chuyến đi</string>
    <string name="PleaseTurnOnLocation">Bạn vui lòng bật Vị trí để sử dụng các tính năng của ứng dụng nhé!</string>
    <string name="WaitSecondToDetermineLocation">Bạn vui lòng đợi giây lát để thiết bị xác định vị trí nhé!</string>
    <string name="ThankYou">Cảm ơn bạn đã lựa chọn ứng dụng Xe !</string>
    <string name="DriverConfirmCompleted">Tài xế đã xác nhận hoàn tất chuyến đi. Chúc mừng bạn được cộng thêm %1$d điểm!</string>
    <string name="WaitDriverConfirm">Bạn vui lòng đợi tài xế Xác nhận trước khi hoàn tất chuyến đi nhé</string>
    <string name="DriverInfo">Thông tin tài xế</string>
    <string name="TotalKm">%1$d Km</string>
    <string name="TotalTrip">%1$d Chuyến</string>
    <string name="TitleVehicleType">Loại phương tiện</string>
    <string name="TitleLicensePlate">Biển số phương tiện</string>
    <string name="TitleGender">Giới tính</string>
    <string name="TitleDetailedReviews">Các đánh giá chi tiết:</string>
    <string name="PassengerItemId">Người dùng: *****%1$s</string>
    <string name="Report">Báo xấu</string>
    <string name="ReportContent">Nội dung báo xấu</string>
    <string name="Male">Nam</string>
    <string name="Female">Nữ</string>
    <string name="AverageNumberOfStars">Số sao trung bình</string>
    <string name="TotalDistanceTraveled">Tổng quãng đường đi được</string>
    <string name="NumberOfCompletedTrips">Số cuốc xe đã hoàn thành</string>
    <string name="HaveNoReview">Hiện chưa có đánh giá nào</string>
    <string name="FeatureInDevelop">Tính năng đang trong quá trình phát triển. Bạn thông cảm nhé !</string>
    <string name="LogoutTitle">Đăng xuất</string>
    <string name="AreYouSureLogout">Bạn có chắc chắn muốn đăng xuất khỏi tài khoản không ?</string>
    <string name="Logout">ĐĂNG XUẤT</string>
    <string name="Cancel">HUỶ</string>
    <string name="FrequentlyAskedQuestions">Những câu hỏi thường gặp</string>
    <string name="RequestSupport">Yêu cầu hỗ trợ</string>
    <string name="AboutUs">Về chúng tôi</string>
    <string name="Topic">+ Đề tài: Phát triển Hệ thống ứng dụng đặt xe ở vùng nông thôn (Developing a car booking application system in rural areas) là ứng dụng đặt xe hỗ trợ cho người dùng (đặc biệt là ở vùng nông thôn) có thể tìm kiếm phương tiện đi lại một cách dễ dàng. Đề tài được thực hiện trong môn “Đồ án chuyên ngành” ở Học Kỳ 231 và môn “Đồ án chuyên ngành” ở Học Kỳ 241.</string>
    <string name="Implementer">+ Người thực hiện: Hồ Đức Trí (MSSV 1912288)</string>
    <string name="Account">Tài khoản</string>
    <string name="Payment">Thanh toán</string>
    <string name="WebSupport">Web hỗ trợ đang trong giai đoạn phát triển. Bạn thông cảm nhé !</string>
    <string name="RequestDetail">Chi tiết yêu cầu</string>
    <string name="TalkWithUs">Nói với chúng tôi</string>
    <string name="WriteHere">Bạn hãy để lại lời nhắn ở đây</string>
    <string name="RequestSend">Đã gửi yêu cầu</string>
    <string name="PleaseWriteContent">Bạn vui lòng điền nội dung nhé !</string>
    <string name="SignUpShortcutShortLabel">Tạo tài khoản</string>
    <string name="SignUpShortcutLongLabel">Đăng ký tài khoản</string>
    <string name="SignUpShortcutDisabledMessage">Hiện chưa hỗ trợ Đăng ký tài khoản</string>
    <string name="SignInShortcutShortLabel">Đăng nhập</string>
    <string name="SignInShortcutLongLabel">Đăng nhập tài khoản</string>
    <string name="SignInShortcutDisabledMessage">Hiện chưa hỗ trợ đăng nhập vào tài khoản</string>
    <string name="CancellationReason1">Tôi đợi quá lâu</string>
    <string name="CancellationReason2">Tôi không thể liên hệ được với tài xế</string>
    <string name="CancellationReason3">Tài xế/phương tiện khác với thông tin</string>
    <string name="CancellationReason4">Địa chỉ đón không đúng</string>
    <string name="CancellationReason5">Lý do khác</string>
    <string name="ReportReason1">Sử dụng ngôn từ không phù hợp</string>
    <string name="ReportReason2">Có hành vi không đúng</string>
    <string name="ReportReason3">Tài xế/phương tiện khác với thông tin</string>
    <string name="ReportReason4">Chạy ẩu</string>
    <string name="ReportReason5">Lý do khác</string>
    <string name="MenuItem1">Đặt xe</string>
    <string name="MenuItem2">Thông tin cá nhân</string>
    <string name="MenuItem3">Lịch sử chuyến đi</string>
    <string name="MenuItem4">Điểm &amp; Ưu đãi</string>
    <string name="MenuItem5">Nhà xe dịch vụ</string>
    <string name="MenuItem6">Cài đặt</string>
    <string name="MenuItem7">Hỗ trợ</string>
    <string name="MenuItem8"><u>Đăng xuất</u></string>
</resources>