<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--static shortcut 1-->
    <shortcut
        android:shortcutId="signUpDriver"
        android:enabled="true"
        android:icon="@drawable/signup_shortcut_icon"
        android:shortcutShortLabel="@string/SignUpShortcutShortLabel"
        android:shortcutLongLabel="@string/SignUpShortcutLongLabel"
        android:shortcutDisabledMessage="@string/SignUpShortcutDisabledMessage"
        tools:targetApi="n_mr1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.example.xevivuapp.signup_login.signup.SignupActivity"
            android:targetPackage="com.example.xevivuapp" />
    </shortcut>

    <!--static shortcut 2-->
    <shortcut
        android:shortcutId="Login"
        android:enabled="true"
        android:icon="@drawable/login_shortcut_icon"
        android:shortcutShortLabel="@string/SignInShortcutShortLabel"
        android:shortcutLongLabel="@string/SignInShortcutLongLabel"
        android:shortcutDisabledMessage="@string/SignInShortcutDisabledMessage"
        tools:targetApi="n_mr1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.example.xevivuapp.signup_login.login.LoginActivity"
            android:targetPackage="com.example.xevivuapp" />
    </shortcut>

</shortcuts>
