<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.SideSheet"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@drawable/bg_side_sheet"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.sidesheet.SideSheetBehavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/sideSheetMenuItem1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_255sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/button_top_side_sheet_menu_border"
        android:backgroundTint="@color/button_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_165sdp"
                android:layout_height="@dimen/_165sdp"
                android:src="@drawable/car_top_button_menu"
                android:layout_marginBottom="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/tvMenuItem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/MenuItem1"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="@dimen/_19ssp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/sideSheetMenuItem2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/inter_bold"
        android:foreground="?attr/selectableItemBackground"
        android:paddingTop="@dimen/_34sdp"
        android:paddingBottom="@dimen/_18sdp"
        android:stateListAnimator="@null"
        android:text="@string/MenuItem2"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_18ssp"
        android:gravity="start"
        android:paddingStart="@dimen/_65sdp"/>

    <Button
        android:id="@+id/sideSheetMenuItem3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/inter_bold"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/_18sdp"
        android:stateListAnimator="@null"
        android:text="@string/MenuItem3"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_18ssp"
        android:gravity="start"
        android:paddingStart="@dimen/_65sdp"/>

    <Button
        android:id="@+id/sideSheetMenuItem4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/inter_bold"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/_18sdp"
        android:stateListAnimator="@null"
        android:text="@string/MenuItem4"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_18ssp"
        android:gravity="start"
        android:paddingStart="@dimen/_65sdp"/>

    <Button
        android:id="@+id/sideSheetMenuItem5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/inter_bold"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/_18sdp"
        android:stateListAnimator="@null"
        android:text="@string/MenuItem5"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_18ssp"
        android:gravity="start"
        android:paddingStart="@dimen/_65sdp"/>

    <Button
        android:id="@+id/sideSheetMenuItem6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/inter_bold"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/_18sdp"
        android:stateListAnimator="@null"
        android:text="@string/MenuItem6"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_18ssp"
        android:gravity="start"
        android:paddingStart="@dimen/_65sdp"/>

    <Button
        android:id="@+id/sideSheetMenuItem7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/inter_bold"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/_18sdp"
        android:stateListAnimator="@null"
        android:text="@string/MenuItem7"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_18ssp"
        android:gravity="start"
        android:paddingStart="@dimen/_65sdp"/>

    <TextView
        android:id="@+id/sideSheetMenuItem8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/inter"
        android:text="@string/MenuItem8"
        android:textColor="@color/button_background"
        android:textAllCaps="false"
        android:textSize="@dimen/_18ssp"
        android:gravity="start"
        android:padding="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_60sdp" />

</LinearLayout>
